dashboard elements position fixed done

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,106 +1,120 @@
-<div class="container d-flex align-items-center justify-content-around my-3 px-2">
+<div class="dashboard-fixed-container">
+  <%= render 'shared/navbar' %>
 
-  <div>
-    <%= cl_image_tag current_user.photo.key, width: 65, height: 65, crop: :thumb, gravity: :face, class: "dashboard-user-pic me-4" %>
-  </div>
+                                          <%# welcome message with photo   %>
+  <div class="container d-flex align-items-center justify-content-around px-2">
 
-  <div class="dashboard-greeting">
-    <h1>Hi, <%= current_user.username %>!</h1>
-    <p>You already had <strong><%= pluralize @tab.tab_drinks.count, "drink" %></strong>!</p>
-  </div>
-
-</div>
-
-<div class="container my-3 px-2">
-
-  <% if @percentage <= 0.2 %>
-
-    <div class="container status-display" style="background: linear-gradient(180deg, #91F5AD 0%, #2DE360 100%)">
-      <div class="row">
-        <div class="col-12">
-          <h2><%= @percentage %> % of alcohool</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <p>Still Good to drive</p>
-        </div>
-      </div>
-    </div>
-  <% elsif @percentage > 0.5  %>
-    <div class="container status-display" style="background: linear-gradient(180deg, #EB7575 0%, #F95454 100%)">
-      <div class="row">
-        <div class="col-12">
-          <h2><%= @percentage %> % of alcohool</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <p>Dont drive</p>
-        </div>
-      </div>
+    <div>
+      <%= cl_image_tag current_user.photo.key, width: 65, height: 65, crop: :thumb, gravity: :face, class: "dashboard-user-pic me-4" %>
     </div>
 
-  <% else %>
-
-    <div class="container status-display" style="background: linear-gradient(180deg, #FFEEB4 0%, #FAC81E 100%)">
-      <div class="row">
-        <div class="col-12">
-          <h2><%= @percentage %> % of alcohool</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <p>Be careful</p>
-        </div>
-      </div>
+    <div class="dashboard-greeting">
+      <h1>Hi, <%= current_user.username %>!</h1>
+      <p>You already had <strong><%= pluralize @tab.tab_drinks.count, "drink" %></strong>!</p>
     </div>
-  <% end %>
+
+  </div>
+
+                                                <%# percent card code  %>
+  <div class="container my-3 px-2">
+
+    <% if @percentage <= 0.2 %>
+
+      <div class="container status-display" style="background: linear-gradient(180deg, #91F5AD 0%, #2DE360 100%)">
+        <div class="row">
+          <div class="col-12">
+            <h2><%= @percentage %> % of alcohool</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <p>Still Good to drive</p>
+          </div>
+        </div>
+      </div>
+    <% elsif @percentage > 0.5  %>
+      <div class="container status-display" style="background: linear-gradient(180deg, #EB7575 0%, #F95454 100%)">
+        <div class="row">
+          <div class="col-12">
+            <h2><%= @percentage %> % of alcohool</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <p>Dont drive</p>
+          </div>
+        </div>
+      </div>
+
+    <% else %>
+
+      <div class="container status-display" style="background: linear-gradient(180deg, #FFEEB4 0%, #FAC81E 100%)">
+        <div class="row">
+          <div class="col-12">
+            <h2><%= @percentage %> % of alcohool</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12">
+            <p>Be careful</p>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+
+<%# div close container fixed %>
 </div>
 
-<div class= "textinside" data-controller="drinks">
-  <div>
-    <header class='horizontal-navbar'>
-      <span class='main-bar-tab horizontal-navbar-active' data-action="click->drinks#printBarTab" data-drinks-target="active active_bartab">BarTab</span>
 
-        <nav class='vertical-align-middle scroll'>
-        <span class='horizontal-nav-item' data-action="click->drinks#printBeers" data-drinks-target="active active_beer">Beers</span>
-        <span class='horizontal-nav-item' data-action="click->drinks#printCyders" data-drinks-target="active active_cyder">Cyders</span>
-        <span class='horizontal-nav-item' data-action="click->drinks#printWines" data-drinks-target="active active_wines">Wines</span>
-        <span class='horizontal-nav-item' data-action="click->drinks#printSpirits" data-drinks-target="active active_spirits">Spirits</span>
-        <span class='horizontal-nav-item' data-action="click->drinks#printCocktails" data-drinks-target="active active_cocktail">Cocktails</span>
-        <span class='horizontal-nav-item' data-action="click->drinks#printShots" data-drinks-target="active active_shot">Shots</span>
+<div  class="dashboard-relative-container">
 
-      </nav>
-    </header>
+  <div class= "textinside" data-controller="drinks">
+    <div class="just-nav">
+      <header class='horizontal-navbar'>
+        <span class='main-bar-tab horizontal-navbar-active' data-action="click->drinks#printBarTab" data-drinks-target="active active_bartab">BarTab</span>
+
+          <nav class='vertical-align-middle scroll'>
+          <span class='horizontal-nav-item' data-action="click->drinks#printBeers" data-drinks-target="active active_beer">Beers</span>
+          <span class='horizontal-nav-item' data-action="click->drinks#printCyders" data-drinks-target="active active_cyder">Cyders</span>
+          <span class='horizontal-nav-item' data-action="click->drinks#printWines" data-drinks-target="active active_wines">Wines</span>
+          <span class='horizontal-nav-item' data-action="click->drinks#printSpirits" data-drinks-target="active active_spirits">Spirits</span>
+          <span class='horizontal-nav-item' data-action="click->drinks#printCocktails" data-drinks-target="active active_cocktail">Cocktails</span>
+          <span class='horizontal-nav-item' data-action="click->drinks#printShots" data-drinks-target="active active_shot">Shots</span>
+
+        </nav>
+      </header>
+    </div>
+
+
+
+    <div data-drinks-target="bartab drinks">
+        <%= render 'bar-tab-cards', tab: @tab %>
+        <%= render "form", tab: @tab %>
+    </div>
+
+    <div data-drinks-target="beers drinks" class="d-none">
+        <%= render 'drink-card', drinks: @beers %>
+    </div>
+
+    <div data-drinks-target="cyders drinks" class="d-none">
+        <%= render 'drink-card', drinks: @cyders %>
+    </div>
+
+    <div data-drinks-target="wines drinks" class="d-none">
+        <%= render 'drink-card', drinks: @wines %>
+    </div>
+
+    <div data-drinks-target="spirits drinks" class="d-none">
+        <%= render 'drink-card', drinks: @spirits %>
+    </div>
+
+    <div data-drinks-target="cocktails drinks" class="d-none">
+        <%= render 'drink-card', drinks: @cocktails %>
+    </div>
+
+    <div data-drinks-target="shots drinks" class="d-none">
+        <%= render 'drink-card', drinks: @shots %>
+    </div>
   </div>
-
-  <div data-drinks-target="bartab drinks">
-      <%= render 'bar-tab-cards', tab: @tab %>
-      <%= render "form", tab: @tab %>
-  </div>
-
-  <div data-drinks-target="beers drinks" class="d-none">
-      <%= render 'drink-card', drinks: @beers %>
-  </div>
-
-  <div data-drinks-target="cyders drinks" class="d-none">
-      <%= render 'drink-card', drinks: @cyders %>
-  </div>
-
-  <div data-drinks-target="wines drinks" class="d-none">
-      <%= render 'drink-card', drinks: @wines %>
-  </div>
-
-  <div data-drinks-target="spirits drinks" class="d-none">
-      <%= render 'drink-card', drinks: @spirits %>
-  </div>
-
-  <div data-drinks-target="cocktails drinks" class="d-none">
-      <%= render 'drink-card', drinks: @cocktails %>
-  </div>
-
-  <div data-drinks-target="shots drinks" class="d-none">
-      <%= render 'drink-card', drinks: @shots %>
-  </div>
-</div>
+ </div>
