--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
 
   <body>
-    <% unless current_page?(root_path) %>
+    <% unless current_page?(root_path) || current_page?(user_dashboard_path) %>
       <%= render 'shared/navbar' %>
     <% end %>
       <%= render "shared/flashes" %>
