--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "pages/show-user";
 @import "pages/dashboard";
 @import "components/card_drinks";
+@import "pages/history-page";
 
 body {
   background-color: #0D0D0D;
