--- a/app/views/pages/_drink-card.html.erb
+++ b/app/views/pages/_drink-card.html.erb
@@ -4,10 +4,10 @@
       <%= cl_image_tag drink.photo.key, crop: :fill %>
     </div>
     <div class= "drink-details">
-      <div id= "drink-name">
+      <div class= "drink-name">
         <p> <%= drink.name %> </p>
       </div>
-      <div id= "alcohol-percentage">
+      <div class= "alcohol-percentage">
         <p> <%= drink.alcohol %> % </p>
       </div>
     </div>
