--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -8,7 +8,7 @@
 }
 
 .dashboard-fixed-container{
-  background-color: black;
+  background-color: #0D0D0D;
   width: 100vw;
   position: sticky;
   top: 0;
