--- a/app/assets/stylesheets/components/_card_drinks.scss
+++ b/app/assets/stylesheets/components/_card_drinks.scss
@@ -44,7 +44,9 @@
   height: 44px;
   width: 44px;
   background: linear-gradient(180deg, #FAC81E 0%, #FAC81EAD 100%);
-  border-radius: 15px;
+  border-radius: 50%;
+  margin-right: 8px;
+  font-size: 26px;
 }
 
 #add-drink-text {
