margin top fixed

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,4 +1,4 @@
-<div class="container d-flex align-items-center justify-content-around my-3 px-2">
+<div class="container d-flex align-items-center justify-content-around px-2" style="margin-top:16px">
 
   <div>
     <%= cl_image_tag current_user.photo.key, width: 65, height: 65, crop: :thumb, gravity: :face, class: "dashboard-user-pic me-4" %>
