--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -50,7 +50,7 @@
     </div>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContentProfile">
-      <ul class="navbar-nav me-auto text-end" style="background-color: black">
+      <ul class="navbar-nav me-auto text-end" style="background-color: #0D0D0D">
         <li class="nav-item">
           <% if user_signed_in? %>
           <%= link_to tabs_path, class: "nav-link" do %>
