--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
 @import "pages/dashboard";
 @import "components/card_drinks";
 @import "pages/history-page";
+// @import "pages/404";
 
 body {
   background-color: #0D0D0D;
