--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
 @import "pages/dashboard";
 @import "components/card_drinks";
 @import "pages/history-page";
+@import "pages/game";
+
 // @import "pages/404";
 
 body {
