--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,9 +30,9 @@
     </div>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
+      <ul class="navbar-nav me-auto" style="background-color: #0D0D0D">
         <li class="nav-item">
-          <%= link_to "#", class: "nav-link" do %>
+          <%= link_to games_path, class: "nav-link" do %>
             <i class="fa-solid fa-gamepad"></i> Games
           <% end %>
         </li>
