--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,9 +12,9 @@
   <ul class="user-details">
     <li class="user-details-header">Gender</li>
     <li class="user-details-p"><%= @user.gender%></li>
-    <li class="user-details-header">Height</li>
+    <li class="user-details-header">Height (cm)</li>
     <li class="user-details-p"><%= @user.height%></li>
-    <li class="user-details-header">Weight</li>
+    <li class="user-details-header">Weight (kg)</li>
     <li class="user-details-p"><%= @user.weight%></li>
     <li class="fav-drinks">  Favourite Drinks  </li>
     <li class="fav-drinks-p"> Moskow Mule  ⭐️ </li>
