Fav Drinks done. Fixed profile and games

--- a/app/assets/stylesheets/pages/_game.scss
+++ b/app/assets/stylesheets/pages/_game.scss
@@ -7,14 +7,14 @@
 }
 
 .game {
-  height: 100vh;
-  width: 100vw;
+  height: 726px;
+  // width: 100vw;
 }
 
 .game-title {
   font-size: 30px;
   text-align: center;
-  margin-top: 2.5rem;
+  margin-top: 2rem;
   color: #FAC81E;
 }
 
