seeds and games dim fix

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
     <li class="user-details-header">Weight</li>
     <li class="user-details-p"><%= @user.weight%> kg</li>
     <li class="fav-drinks">  Favourite Drinks  </li>
-    <li class="fav-drinks-p"> Moskow  ⭐️ </li>
+    <li class="fav-drinks-p"> Moskow Mule ⭐️ </li>
     <li class="fav-drinks-p"> Small Beer  ⭐️ </li>
     <li class="fav-drinks-p"> Tequilla Shot  ⭐️ </li>
   </ul>
