--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,8 +1,8 @@
 <%= render 'shared/navbar' %>
 
 <div class="game">
-  <p class="game-title">🎮 Test your reaction 🎮</p>
-  <p class= "game-desc">Click on the boxes and circles as quickly as you can. Your reaction time will be posted below: </p>
+  <p class="game-title">🎮 🎮 🎮</p>
+  <p class= "game-desc">Hit the icons as fast as you can. If you can... </p>
 
   <p id="printReactionTime"></p>
 
