game title fixed

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/navbar' %>
 
 <div class="game">
-  <p class="game-title">🎮 🎮 🎮</p>
+  <p class="game-title">🎮 Reaction Test 🎮</p>
   <p class= "game-desc">Hit the icons as fast as you can. If you can... </p>
 
   <p id="printReactionTime"></p>
